# My-OpenWaf

./: .gitignore  .release.json  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  devlog.md  go.mod  go.sum  login-snapshot.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release-pr.yml  release.yml
cmd/: main.go
cmd/pow-wasm/: main.go
docs/: index.md  开发者指南.md  快速开始.md  故障排除.md  缓存与性能优化.md
docs/WAF 引擎系统/: WAF 引擎系统.md  动作与结果系统.md  引擎核心架构.md  规则匹配器.md  规则编译器.md
docs/前端管理界面/: API 集成.md  Next.js 架构设计.md  主题系统与样式.md  前端管理界面.md  状态管理策略.md  用户交互设计.md
docs/安全机制/: API 密钥管理.md  JWT 认证机制.md  会话管理.md  出站安全控制.md  安全机制.md  客户端 IP 获取.md
docs/安全防护功能/: ACL 规则引擎.md  IP 信誉系统.md  地理位置阻断.md  安全防护功能.md  机器人检测.md  阻断机制.md
docs/扩展与插件/: 中间件开发.md  扩展与插件.md
docs/扩展与插件系统/: 中间件开发.md  扩展与插件系统.md
docs/数据存储层/: GORM 配置与使用.md  Redis 集成.md  多数据库支持.md  数据存储层.md  数据库模型设计.md  数据访问层设计.md  数据迁移管理.md
docs/数据平面处理/: SSE 事件推送.md  TLS 终止与证书管理.md  WebSocket 连接处理.md  上游代理配置.md  性能监控与调优.md  数据平面处理.md  请求处理流程.md
docs/架构设计/: 双服务器架构详解.md  快照模式实现.md  数据流分析.md  架构设计.md  组件关系图.md
docs/监控与可观测性/: 事件归档系统.md  健康检查机制.md  安全事件记录.md  性能指标收集.md  日志管理系统.md  监控与可观测性.md
docs/管理 API 系统/: CVE 规则管理 API.md  IP 黑白名单管理 API.md  (+10 more)
frontend/: .gitignore  components.json  next.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
scripts/: build.ps1  build.sh  qps-diagnose.ps1  start-test-upstream.ps1
wasm-pow-solver/: Cargo.toml  Makefile
wasm-pow-solver/src/: crypto.rs  env.rs  fingerprint.rs  integrity.rs  lib.rs  obfuscate.rs  vmp.rs
(+700 files in other folders)
