[package]
name = "owaf-pow-solver"
version = "0.1.0"
edition = "2021"
description = "pow"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
sha2 = { version = "0.11.0", default-features = false }
hmac = { version = "0.13", default-features = false }
aes-gcm = { version = "0.11", default-features = false, features = ["aes", "alloc"] }
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "Performance",
    "Window",
    "Navigator",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "WebGlRenderingContext",
    "console",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
